--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
   <div id="root"></div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="./MyReact.js"></script>
-  <script src="./Counter.js"></script>
+  <script src="./App.js"></script>
 </body>
 
 </html>
