fetching data from sever, and some refactoring

--- a/client/index.html
+++ b/client/index.html
@@ -10,9 +10,10 @@
 
 <body>
   <div id="root"></div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="./MyReact.js"></script>
-  <script src="./App.js"></script>
+  <script src="./component.js"></script>
+
+  <script src="./examples/App.js"></script>
 </body>
 
 </html>
