--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,8 @@
   <script src="./MyReact.js"></script>
   <script src="./component.js"></script>
 
+  <!-- <script src="./examples/Form.js"></script>
+  <script src="./examples/Counter.js"></script> -->
   <script src="./examples/App.js"></script>
 </body>
 
